Time: 1054 ms (5.28%), Space: 109.9 MB (5.32%) - LeetHub